fixing overflow nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ nav ul li {
   padding: 0.625rem;
   border-radius: 6px;
   box-shadow: 0px 0px 1px 1px var(--primary-shadow);
- /* text-shadow: 5px 5px 5px var(--primary-color);*/
+  /* text-shadow: 5px 5px 5px var(--primary-color);*/
 }
 
 .bio h2 {
@@ -229,12 +229,12 @@ nav ul li {
 section {
   display: block;
 }
-.container-title{
+.container-title {
   width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 .projects-title {
   text-align: center;
@@ -438,7 +438,7 @@ footer {
     left: 10%;
     width: 80%; */
     top: 90px;
-    left: 60%;
+    left: 56%;
     width: 39%;
     text-align: center;
     transform: translateX(120%);
@@ -540,6 +540,11 @@ footer {
   .contact-form-container {
     max-width: 17.75rem;
   }
+
+  /* Build Hamburguer Menu */
+  nav ul {
+    left: 52%;
+  }
 }
 
 /* responsive 1047px */
@@ -553,7 +558,7 @@ footer {
     width: 18.3rem;
     margin-top: 2rem;
   }
-  .more-about{
+  .more-about {
     padding: 1rem 10rem;
   }
 }
